crates/lower/src/tests/snapshots/dead_code_break.snap
---
source: crates/lower/src/tests.rs
assertion_line: 257
expression: "(test[1], res)"
---
- "\nfn main() {\n    loop {\n        let i: int = 0\n        break\n        i += 1\n    }\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: main
              params: []
              ret_ty: Void
              is_extern: false
              module: main
              member_of: ~
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Loop:
                          body:
                            kind:
                              Block:
                                list:
                                  - kind:
                                      Let:
                                        name: i
                                        antn: Int32
                                        init:
                                          kind:
                                            Lit:
                                              value:
                                                Int32: 0
                                              ty: Int32
                                  - kind: Break
                                ty: Void
                  ty: Void
    prototypes:
      - name: main
        params: []
        ret_ty: Void
        is_extern: false
        module: main
        member_of: ~

