crates/lower/src/tests/snapshots/func_call_mix2.snap
---
source: crates/lower/src/tests.rs
assertion_line: 130
expression: "(test[1], res)"
---
- "\nfn main() {\n    foo()\n    foo()\n}\n\nfn foo() {}\n\nfn bar() {\n    foo()\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: main
              args: []
              ret_ty: Void
              is_extern: false
              module: main
              member_of: ~
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Call:
                          name: "_main::foo~void"
                          args: []
                          ty: Void
                    - kind:
                        Call:
                          name: "_main::foo~void"
                          args: []
                          ty: Void
                  ty: Void
      - kind:
          Fn:
            proto:
              name: "_main::foo~void"
              args: []
              ret_ty: Void
              is_extern: false
              module: main
              member_of: ~
            body:
              kind:
                Block:
                  list: []
                  ty: Void
      - kind:
          Fn:
            proto:
              name: "_main::bar~void"
              args: []
              ret_ty: Void
              is_extern: false
              module: main
              member_of: ~
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Call:
                          name: "_main::foo~void"
                          args: []
                          ty: Void
                  ty: Void
    prototypes:
      - name: main
        args: []
        ret_ty: Void
        is_extern: false
        module: main
        member_of: ~
      - name: "_main::foo~void"
        args: []
        ret_ty: Void
        is_extern: false
        module: main
        member_of: ~
      - name: "_main::bar~void"
        args: []
        ret_ty: Void
        is_extern: false
        module: main
        member_of: ~

