crates/lower/src/tests/snapshots/func_call_recursive.snap
---
source: crates/lower/src/tests.rs
assertion_line: 132
expression: "(test[1], res)"
---
- "\nfn foo() {\n    foo()\n}\n\nfn main() {\n    foo()\n}\n"
- Ok:
    functions:
      - kind:
          Fn:
            proto:
              name: _main~foo~void
              args: []
              ret_ty: Void
              is_extern: false
              module: main
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Call:
                          name: _main~foo~void
                          args: []
                          ty: Void
                  ty: Void
      - kind:
          Fn:
            proto:
              name: main
              args: []
              ret_ty: Void
              is_extern: false
              module: main
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Call:
                          name: _main~foo~void
                          args: []
                          ty: Void
                  ty: Void
    structs: []
    prototypes:
      - name: _main~foo~void
        args: []
        ret_ty: Void
        is_extern: false
        module: main
      - name: main
        args: []
        ret_ty: Void
        is_extern: false
        module: main

