crates/lower/src/tests/snapshots/init_literal_nested_struct.snap
---
source: crates/lower/src/tests.rs
assertion_line: 226
expression: "(test[1], res)"
---
- "\nfn main() {\n    let x: Foo\n}\nstruct Foo {\n    let a: int\n    let b: bool\n}\nstruct Bar {\n    let a: Foo\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: main
              args: []
              ret_ty: Void
              is_extern: false
              module: main
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Let:
                          name: x
                          antn:
                            Comp: "main::Foo"
                          init:
                            kind:
                              Lit:
                                value:
                                  Comp:
                                    - kind:
                                        Lit:
                                          value:
                                            Int32: 0
                                          ty: Int32
                                    - kind:
                                        Lit:
                                          value:
                                            Bool: false
                                          ty: Bool
                                ty:
                                  Comp: "main::Foo"
                  ty: Void
    prototypes:
      - name: main
        args: []
        ret_ty: Void
        is_extern: false
        module: main

